# tpo-coach

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  server.json
.github/: CODEOWNERS  pull_request_template.md
docs/: README.md
docs/idea/: README.md  delivery-plan.md  features.md  host-mode.md  image-input.md  image_poc.md  matching-flow.md  use-cases.md  weather_role.md
docs/superpowers/plans/: 2026-06-29-clothing-metadata-db.md  2026-07-01-multi-style-situation-recommend.md  2026-07-01-outfit-recommend-tools.md  2026-07-01-season-filter.md  2026-07-01-season-reliability.md
docs/superpowers/specs/: 2026-06-29-clothing-metadata-db-design.md  2026-06-30-clothing-metadata-db-v2-design.md  2026-07-01-multi-style-situation-recommend-design.md  2026-07-01-outfit-recommend-tools-design.md
scripts/: rename.sh  upload_images.py
src/playmcp_server/: __init__.py  config.py  models.py  server.py
src/playmcp_server/data/: clothing_items.csv  outfits.csv
src/playmcp_server/db/: __init__.py  build_db.py  color_rules.py  repository.py  schema.py  season.py  vocab.py
src/playmcp_server/prompts/: __init__.py
src/playmcp_server/resources/: __init__.py
src/playmcp_server/tools/: README.md  __init__.py  color.py  echo_probe.py  example.py  image.py  recommend.py  render_check.py
tests/: conftest.py  test_build_db.py  test_color.py  test_color_rules.py  test_image_poc.py  test_recommend.py  test_render_check.py  test_repository.py  test_schema.py  test_season.py  test_tools.py  test_vocab.py
(+2 files in other folders)
